# webserver

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  problem.txt  pyproject.toml
tests/: __main__.py  config.py  test_1.py
webserver/: main.py
webserver/crud/: __init__.py  publication.py  user.py
webserver/db/: __init__.py  database.py  publication.py  user.py
webserver/libs/token_generator/: __init__.py  chars.py  generator.py
webserver/models/: publication.py  user.py
