[tool.poetry.scripts]
start = "webserver.main:start"


[tool.poetry]
name = "webserver"
version = "0.1.0"
description = ""
authors = ["BoolmanO <ponos585858@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
unicorn = "^2.0.1.post1"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.7"
pymysql = "^1.0.2"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
